# app/Http/Controllers/User/ApiTokenController.php
@@ -12,57 +12,7 @@ class ApiTokenController extends Controller
 
 
 
-    /**
-     * @param Request $request
-     * @return array
-     *
-     * @OA\Post(
-     *     path="/tokens/create",
-     *     tags={"USER"},
-     *     security={{"bearerAuth":{}}},
-     *        @OA\Parameter(
-     *    *      name="Authorization",
-     *    *      in="header",
-     *    *      required=true,
-     *    *      description="Bearer {access-token}",
-     *    *      @OA\Schema(
-     *    *          type="bearerAuth"
-     *    *      )
-     *    *     ),
-     *     @OA\RequestBody(
-     *          required=true,
-     *          description="User data",
-     *           @OA\JsonContent(
-     *               required={"token_name"},
-     *               @OA\Property(property="token_name", type="string", example="jean"),
 
-     *           )
-     *       ),
-     *     @OA\Response(
-     *         response="200",
-     *         description="Token created successfully",
-     *          @OA\JsonContent(
-     *               @OA\Property(property="token", type="string", example="azeaz-azeazea-azeazeaz-azeaeae"),
-     *           ),
-     *     ),
-     *      @OA\Response(
-     *           response=422,
-     *           description="Validation error"
-     *     )
-     *
-     * )
-     *
-     */
-    public function create(Request $request)
-    {
-        $this->validate($request, [
-           "token_name"=>["required"]
-        ]);
-
-        $token = $request->user()->createToken($request->token_name);
-
-        return ['token' => $token->plainTextToken];
-    }
 
     public function editRole(Request $request, string $role){
         $user = User::where('id', $request->user()->id)->first();
